--- a/src/services/.env
+++ b/src/services/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL_DEV = "http://localhost:5003/api/"
+REACT_APP_BASE_URL_DEV='http://localhost:5003/api/'
+REACT_APP_BASE_URL='https://api.github.com/users/'
